--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
 <body>
 	hi!
 	<script>
+		var minutes = 1000 * 60;
+		var hours = minutes * 60;
+		var days = hours * 24;
+		var years = days * 365;
 		var d = new Date();
-		var n = d.getTime();
-		d3.select("body").append("spen").text(n);
+		var t = d.getTime();
+		var y = Math.round(t / years);
+		d3.select("body").append("spen").text(y)
 	</script>
 </body>
 
