--- a/pie.html
+++ b/pie.html
@@ -5,24 +5,21 @@
 	<meta charset="UTF-8">
 	<style>
 		body{
-			background-color: #fdfef3;
+			background-color: #f2fef6;
 		}
-		#chart0{ width:250px; min-height:70px; float:left; margin-right:10px; }
-		#chart1{ width:250px; min-height:70px; float:left; margin-right:10px; }
-		#chart2{ width:250px; min-height:70px; float:left; margin-right:10px; }
-		#chart3{ width:250px; min-height:70px; float:left; margin-right:10px; }
-		#chart4{ width:250px; min-height:70px; float:left; margin-right:10px; }
-		#chart5{ width:250px; min-height:70px; float:left; margin-right:10px; }
-		#source{ width:500px; min-height:70px; float:left; margin-right:10px;  }
+		.floating-box{ display: inline-block;}
+		#source{ position: fixed; bottom: 0; width: 100%;}
 	</style>
 </head>
 <body>
-	<div id="chart0"></div>
-	<div id="chart1"></div>
-	<div id="chart2"></div>
-	<div id="chart3"></div>
-	<div id="chart4"></div>
-	<div id="chart5"></div>
+	<div align="center">
+		<div id="chart0" class="floating-box"></div>
+		<div id="chart1" class="floating-box"></div>
+		<div id="chart2" class="floating-box"></div>
+		<div id="chart3" class="floating-box"></div>
+		<div id="chart4" class="floating-box"></div>
+		<div id="chart5" class="floating-box"></div>
+	</div>
 	<script>
 		var url = "https://ntu-csx-d3js.github.io/b05902108/macro.csv";
 		d3.csv(url, function(temp){
