--- a/pie.html
+++ b/pie.html
@@ -72,7 +72,7 @@
 				var str22 = "年，進出口和消費比例"
 				var what = str11.concat(str22);
 
-				arcs.append("text").attr("x", 10).attr("y", 130).attr("text-anchor", "middle").style("font-size", "1.0em").attr("fill", "black").style("font-weight", 10).text(what);
+				vis.append("text").attr("x", 10).attr("y", 130).attr("text-anchor", "middle").style("font-size", "1.0em").attr("fill", "black").style("font-weight", 10).text(what);
 			}
 		});
 	</script>
