--- a/pie.html
+++ b/pie.html
@@ -12,6 +12,9 @@
 	</style>
 </head>
 <body>
+	<div>
+		<h1 align="center">總體所佔比例圓餅圖</h1>
+	</div>
 	<div align="center">
 		<div id="chart0" class="floating-box"></div>
 		<div id="chart1" class="floating-box"></div>
@@ -76,7 +79,7 @@
 			}
 		});
 	</script>
-	<div id="source"><a href="http://statdb.dgbas.gov.tw/pxweb/Dialog/statfile9L.asp">
+	<div ><a href="http://statdb.dgbas.gov.tw/pxweb/Dialog/statfile9L.asp">
 		<h3 align="right">資料來源：行政院主計處總體資料庫</h3>
 	</a></div>
 </body>
