--- a/pie.html
+++ b/pie.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 	<div>
-		<h1 align="center">總體所佔比例圓餅圖</h1>
+		<h1 align="center">總體資料所佔比例圓餅圖</h1>
 	</div>
 	<div align="center">
 		<div id="chart0" class="pie_style"></div>
