--- a/project/index.html
+++ b/project/index.html
@@ -1,27 +1,17 @@
 <!DOCTYPE html>
-<!--
-Template Name: Appsea
-Author: <a href="http://www.os-templates.com/">OS Templates</a>
-Author URI: http://www.os-templates.com/
-Licence: Free to use under our free template licence terms
-Licence URI: http://www.os-templates.com/template-terms
--->
 <html>
 <head>
-<title>Appsea</title>
+<title>Simple Map</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link href="layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">
 </head>
 <body id="top">
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
+
 <div class="wrapper row1">
   <header id="header" class="hoc clear"> 
-    <!-- ################################################################################################ -->
     <div id="logo" class="fl_left">
-      <h1><a href="index.html">Appsea</a></h1>
+      <h1><a href="index.html">麥當勞和星巴克調查          可能會用到?<--</a></h1>
     </div>
     <nav id="mainav" class="fl_right">
       <ul class="clear">
@@ -52,30 +42,21 @@ Licence URI: http://www.os-templates.com/template-terms
         <li><a href="#">Link Text</a></li>
       </ul>
     </nav>
-    <!-- ################################################################################################ -->
   </header>
 </div>
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
+
 <div class="wrapper bgded overlay" style="background-image:url('images/demo/backgrounds/01.png');">
   <div id="pageintro" class="hoc clear"> 
-    <!-- ################################################################################################ -->
     <article>
       <h2 class="heading">Vivamus tempor purus mauris sollicitudin</h2>
       <p>Turpis eget facilisis duis vitae lacus eleifend laoreet.</p>
       <footer><a class="btn" href="#">Tristique lectus</a></footer>
     </article>
-    <!-- ################################################################################################ -->
   </div>
 </div>
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
+
 <div class="wrapper row3">
   <main class="hoc container clear"> 
-    <!-- main body -->
-    <!-- ################################################################################################ -->
     <div class="group btmspace-80">
       <div class="one_half first">
         <h4>Vivamus lobortis consequat</h4>
@@ -100,17 +81,12 @@ Licence URI: http://www.os-templates.com/template-terms
         <p>Sed facilisis magna vitae metus vulputate eleifend mauris gravida porta erat a lacinia vivamus egestas dapibus eros quis.</p>
       </article>
     </div>
-    <!-- ################################################################################################ -->
-    <!-- / main body -->
     <div class="clear"></div>
   </main>
 </div>
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
+
 <div class="wrapper">
   <section id="latest" class="container clear"> 
-    <!-- ################################################################################################ -->
     <div class="center btmspace-80">
       <h3 class="font-x2 nospace">Convallis neque nam id</h3>
       <p class="nospace">Nisi tellus curabitur vitae massa sollicitudin.</p>
@@ -171,15 +147,10 @@ Licence URI: http://www.os-templates.com/template-terms
         </figure>
       </li>
     </ul>
-    <!-- ################################################################################################ -->
   </section>
 </div>
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
 <div class="wrapper row3">
   <section class="hoc container clear"> 
-    <!-- ################################################################################################ -->
     <div class="btmspace-50">
       <h3 class="font-x2 nospace">Rutrum porttitor pellentesque</h3>
       <p class="nospace">Gravida tincidunt tortor ac efficitur fusce sed arcu lorem.</p>
@@ -201,29 +172,19 @@ Licence URI: http://www.os-templates.com/template-terms
         <footer><a class="btn" href="#">Read More</a></footer>
       </article>
     </div>
-    <!-- ################################################################################################ -->
   </section>
 </div>
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
 <div class="wrapper bgded" style="background-image:url('images/demo/backgrounds/02.png');">
   <div class="hoc split clear">
     <article class="box clear"> 
-      <!-- ################################################################################################ -->
       <h6 class="heading">Fermentum cras varius</h6>
       <p class="btmspace-30">Porttitor sagittis convallis purus in dictum metus consequat vel donec fringilla velit at augue euismod sodales fusce&hellip;</p>
       <footer><a class="btn" href="#">Read More</a></footer>
-      <!-- ################################################################################################ -->
     </article>
   </div>
 </div>
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
 <div class="wrapper row3">
   <div class="hoc container clear center"> 
-    <!-- ################################################################################################ -->
     <article>
       <h2 class="heading font-x3">Venenatis fringilla ligula convallis<br>
         ligula natoque dapibus eros</h2>
@@ -232,15 +193,10 @@ Licence URI: http://www.os-templates.com/template-terms
       <footer class="font-xs">** Montes nascetur mus sed<br>
         sapien enim amet volutpat libero sit</footer>
     </article>
-    <!-- ################################################################################################ -->
   </div>
 </div>
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
 <div class="wrapper bgded" style="background-image:url('images/demo/backgrounds/03.png');">
   <ul class="nospace group clrbox">
-    <!-- ################################################################################################ -->
     <li>
       <article>
         <h4 class="heading">Suspendisse potenti nullam</h4>
@@ -262,15 +218,10 @@ Licence URI: http://www.os-templates.com/template-terms
         <footer><a class="btn" href="#">Read More</a></footer>
       </article>
     </li>
-    <!-- ################################################################################################ -->
   </ul>
 </div>
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
 <div class="wrapper row4">
   <footer id="footer" class="hoc clear"> 
-    <!-- ################################################################################################ -->
     <div class="one_quarter first">
       <h6 class="title">Fermentum mi ornare</h6>
       <p>Consectetur sodales interdum sed feugiat tellus orci id fringilla sem pulvinar in aliquam mattis nisl ac justo venenatis gravida vel nulla velit placerat.</p>
@@ -319,23 +270,14 @@ Licence URI: http://www.os-templates.com/template-terms
         </li>
       </ul>
     </div>
-    <!-- ################################################################################################ -->
   </footer>
 </div>
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
 <div class="wrapper row5">
   <div id="copyright" class="hoc clear"> 
-    <!-- ################################################################################################ -->
     <p class="fl_left">Copyright &copy; 2016 - All Rights Reserved - <a href="#">Domain Name</a></p>
     <p class="fl_right">Template by <a target="_blank" href="http://www.os-templates.com/" title="Free Website Templates">OS Templates</a></p>
-    <!-- ################################################################################################ -->
   </div>
 </div>
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
-<!-- ################################################################################################ -->
 <a id="backtotop" href="#top"><i class="fa fa-chevron-up"></i></a>
 <!-- JAVASCRIPTS -->
 <script src="layout/scripts/jquery.min.js"></script>
