--- a/project/index.html
+++ b/project/index.html
@@ -25,7 +25,7 @@
 <div class="wrapper row1">
   <header id="header" class="hoc clear"> 
     <div id="logo" class="fl_left">
-      <h1><a href="index.html">麥當勞和星巴克調查 &nbsp 可能會用到?<--</a></h1>
+      <h1><a href="index.html">麥當勞和星巴克調查 <span style="display:inline-block; width: 30;"></span> 可能會用到?<--<span style="display:inline-block; width: 10;"></span></a></h1>
     </div>
     <nav id="mainav" class="fl_right">
       <ul class="clear">
