--- a/project/index.html
+++ b/project/index.html
@@ -26,11 +26,11 @@
 <div class="wrapper row1">
   <header id="header" class="hoc clear"> 
     <div id="logo" class="fl_left">
-      <h1><a href="index.html">麥當勞和星巴克調查 <span style="display:inline-block; width: 30;"></span> 可能會用到?<--<span style="display:inline-block; width: 10;"></span></a></h1>
+      <h1><a href="index.html">麥當勞和星巴克調查</a></h1>
     </div>
     <nav id="mainav" class="fl_right">
       <ul class="clear">
-        <li class="active"><a href="index.html">Home</a></li>
+        <li class="active"><a href="index.html">可能會用到? Home</a></li>
         <li><a class="drop" href="#">Pages</a>
           <ul>
             <li><a href="pages/gallery.html">Gallery</a></li>
