--- a/HW1/HW1.html
+++ b/HW1/HW1.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<script type="text/javascript">
-		var url = "https://ntu-csx-d3js.github.io/b05902108/macro.csv";
+		var url = "https://ntu-csx-d3js.github.io/b05902108/HW1/macro.csv";
 		d3.csv(url, function(data){
 			console.log(data);
 			
