--- a/HW3/pie.html
+++ b/HW3/pie.html
@@ -23,7 +23,7 @@
 		<div id="chart5" class="pie_style"></div>
 	</div>
 	<script>
-		var url = "https://ntu-csx-d3js.github.io/b05902108/macro.csv";
+		var url = "https://ntu-csx-d3js.github.io/b05902108/HW3/macro.csv";
 		d3.csv(url, function(temp){
 			
 			var typecolor = [d3.scale.category20c(), d3.scale.category10(), d3.scale.category20(), d3.scale.category20b(), d3.scale.category20c(), d3.scale.category10()];
