--- a/HW2/bar.html
+++ b/HW2/bar.html
@@ -13,7 +13,7 @@
 	<div class = 'a'></div>
 	<div class = 'b'></div>
 	<script type="text/javascript">
-		var url = "https://ntu-csx-d3js.github.io/b05902108/m.csv";
+		var url = "https://ntu-csx-d3js.github.io/b05902108/HW2/m.csv";
 		
 		d3.csv(url, function(data){
 			var w = 600;
