--- a/project/index.html
+++ b/project/index.html
@@ -65,13 +65,13 @@
     });
 
     // draw city boundary
-    var cities = ["Taipei"];
+    var cities = ["Taipei", "keelung"];
     for(var i = 0; i < cities.length; i++){
       var city_url = "https://ntu-csx-d3js.github.io/b05902108/project/data/city/" + cities[i] + ".csv";
       console.log(city_url);
       d3.csv(city_url, function(data){
         var temp = [];
-        console.log(data[0])
+        console.log(data[200])
         for(var j = 0; j < data.length; j++){
           temp[j] = {lat:parseFloat(data[j].Latitude),lng:parseFloat(data[j].Longitude)};  
         }
