--- a/project/index.html
+++ b/project/index.html
@@ -65,7 +65,7 @@
     });
 
     // draw city boundary
-    var cities = ["Taipei", "keelung"];
+    var cities = ["new_taipei", "Taipei", "keelung"];
     for(var i = 0; i < cities.length; i++){
       var city_url = "https://ntu-csx-d3js.github.io/b05902108/project/data/city/" + cities[i] + ".csv";
       console.log(city_url);
