--- a/project/index.html
+++ b/project/index.html
@@ -64,6 +64,10 @@
       }
     });
 
+    // decide what color to draw
+    var home_salary_url = "https://ntu-csx-d3js.github.io/b02106020/project/home_salary.csv"
+    color = []
+    
     // draw city boundary
     var cities = ["new_taipei", "Taipei", "keelung"];
     for(var i = 0; i < cities.length; i++){
