--- a/project/index.html
+++ b/project/index.html
@@ -69,7 +69,7 @@
     color = []
     
     // draw city boundary
-    var cities = ["new_taipei", "Taipei", "keelung", "hsinchu", "hsinchu_city", "taoyuan", "miaoli"];
+    var cities = ["new_taipei", "taipei", "keelung", "hsinchu", "hsinchu_city", "taoyuan", "miaoli", "taichung"];
     for(var i = 0; i < cities.length; i++){
       var city_url = "https://ntu-csx-d3js.github.io/b05902108/project/data/city/" + cities[i] + ".csv";
       console.log(city_url);
