--- a/project/index.html
+++ b/project/index.html
@@ -70,9 +70,11 @@
     
     // draw city boundary
     var cities = ["new_taipei", "taipei", "keelung", "hsinchu", "hsinchu_city", "taoyuan", "miaoli", "taichung", "changhua", "yunlin", "chiayi", "chiayi_city", "tainan", "kaohsiung", "pingtung", "nantou", "taitung", "hualien", "ilan", "penghu"];
+    var poly = [];
     for(var i = 0; i < cities.length; i++){
       var city_url = "https://ntu-csx-d3js.github.io/b05902108/project/data/city/" + cities[i] + ".csv";
       console.log(city_url);
+      var app = [1, 2, 5];
       d3.csv(city_url, function(data){
         var temp = [];
         for(var j = 0; j < data.length; j++){
@@ -87,6 +89,7 @@
           fillColor: '#FF0000',
           fillOpacity: 0.35
         });
+        poly[i] = bermudaTriangle;
         bermudaTriangle.setMap(map);
       });
     }
