--- a/project/index.html
+++ b/project/index.html
@@ -66,17 +66,16 @@
 
     // decide what color to draw
     var home_salary_url = "https://ntu-csx-d3js.github.io/b02106020/project/home_salary.csv"
-    color = []
     
     // draw city boundary
     var cities = ["new_taipei", "taipei", "keelung", "hsinchu", "hsinchu_city", "taoyuan", "miaoli", "taichung", "changhua", "yunlin", "chiayi", "chiayi_city", "tainan", "kaohsiung", "pingtung", "nantou", "taitung", "hualien", "ilan", "penghu"];
-    var poly = [];
     for(var i = 0; i < cities.length; i++){
       var city_url = "https://ntu-csx-d3js.github.io/b05902108/project/data/city/" + cities[i] + ".csv";
       console.log(city_url);
       var app = [1, 2, 5];
       d3.csv(city_url, function(data){
         var temp = [];
+        var color = ['#FF000', '#FF0022', '#FF0033']
         for(var j = 0; j < data.length; j++){
           temp[j] = {lat:parseFloat(data[j].Latitude),lng:parseFloat(data[j].Longitude)};  
         }
@@ -86,10 +85,9 @@
           strokeColor: '#FF0000',
           strokeOpacity: 0.8,
           strokeWeight: 2,
-          fillColor: '#FF0000',
+          fillColor: '#FF0011',
           fillOpacity: 0.35
         });
-        poly[i] = bermudaTriangle;
         bermudaTriangle.setMap(map);
       });
     }
